[tool.poetry]
name = "email-contact-form"
version = "0.1.0"
description = "AWS Lambda Function backing a Contact Us form"
authors = ["grayson <grayson@starnomaddigital.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
troposphere = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
